# AiiDA-NN-xTB

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  smiles2structure.py  structure2xyz.py  submit_batch.py
aiida_nn_xtb/: dict2zarr.py  smiles2structure.py  structure2xyz.py  workchain.py  xyz2dict.py
docs/: 00_architecture_overview.md  01_structure_data.md  02_calcjob_wrapper.md  03_parser_logic.md  04_workchain_async.md  05_querybuilder_extraction.md  06_batch_submission.md
