[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiida-nn-xtb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiida-core>=2.8.0",
    "rdkit>=2024"
]

[tool.hatch.build.targets.wheel]
packages = ["aiida_nn_xtb"]

# AiiDA

[project.entry-points."aiida.calculations"]
# connects structure2xyz script
"nnxtb_calc" = "aiida_nn_xtb.structure2xyz:NNxTBCalculation"

[project.entry-points."aiida.parsers"]
# connects structure2xyz and xyz2dict scripts
"nnxtb_parser" = "aiida_nn_xtb.xyz2dict:NNxTBParser"
